--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -43,7 +43,7 @@
 .right {
   flex: 1 1 0;
   font-size: 50px;
-  border: 1px solid;
+  /*border:1px solid rgba(196,203,215,1);*/
 }
 
 .descriptions {
