--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -602,8 +602,8 @@
 .explanationCell {
   display: flex;
   padding: 0.1em;
-  border-bottom: solid 1px #d8d8d8;
-  border-right: 1px solid #d8d8d8;
+  border: solid 1px #d8d8d8;
+  /* border-right: 1px solid #d8d8d8; */
   flex: 0 0 0.4em;
   align-items: center;
   height: 30px;
