RL-1952 异常值检测模型结果页，异常值比例设定栏精度有不够的可能，导致显示异常

--- a/src/components/Charts/charts.module.css
+++ b/src/components/Charts/charts.module.css
@@ -37,7 +37,19 @@
 
 
 .adjust{
-    font-size:14px;
+    font-size:15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.adjust label{
+    display:inline-block;
+}
+
+.adjust label:after{
+    content: attr(data-tip);
+    font-size: 12px;
+    display: block;
 }
 
 .slider{
