--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -1073,10 +1073,11 @@ button.disable {
   cursor: pointer;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
   background-image: linear-gradient(to bottom, #5b657b, #243448);
-  margin:0.1em auto 0;
+  margin: 0.1em auto 0;
 }
-.newVariableHintSyntax button span{
-  color:#fff;
+
+.newVariableHintSyntax button span {
+  color: #fff;
 }
 
 .funcTips {
@@ -1142,6 +1143,13 @@ button.disable {
   white-space: nowrap;
   font-size: 0.875rem;
 }
+
+span.crossWarning {
+  max-width: 100%;
+  color: #fff;
+  font-size: 0.5rem;
+}
+
 .advancedSolution {
   display: flex;
   flex: none;
