--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -625,3 +625,11 @@
   width: 2.3em;
   flex: none;
 }
+
+button.disable {
+  cursor: not-allowed;
+  background-color: #d3d3d3;
+  color: #aaaaaa;
+  background-image: none;
+  border-color: transparent;
+}
