RL-1920 【聚类】建模结果高级视图未按照设计图完成

--- a/src/components/Train/AdvancedViewUn/AdvancedView.module.css
+++ b/src/components/Train/AdvancedViewUn/AdvancedView.module.css
@@ -234,3 +234,14 @@
     display: inline-block;
     vertical-align: bottom;
   }
+
+  .tb a{
+    color: rgba(83, 157, 240, 1);
+  }
+.on{
+  background-color: rgba(83, 157, 240, 1);
+  color:#fff !important;
+  line-height: 34px;
+  padding:0 10px;
+  display: inline-block;
+}
