--- a/src/components/Charts/charts.module.css
+++ b/src/components/Charts/charts.module.css
@@ -42,6 +42,17 @@
     justify-content: center;
     align-items: center;
 }
+
+.adjust span{
+    font-size: 12px;
+}
+
+.adjust div>span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .adjust label{
     display:inline-block;
 }
