--- a/src/components/Train/styles.module.css
+++ b/src/components/Train/styles.module.css
@@ -1,7 +1,8 @@
 .modeling {
-    display: flex;
-    flex: auto;
-    background-color: #fff;
-    overflow: auto;
-    position: relative;
+  display: flex;
+  flex: auto;
+  background-color: #fff;
+  overflow: auto;
+  position: relative;
+  justify-content: flex-start;
 }
