--- a/src/components/Modeling/AdvancedView/AdvancedView.module.css
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.css
@@ -95,6 +95,7 @@
   }
   .detailCurves .rightPanel {
     flex: 2;
+    position: relative;
   }
   .detailCurves .rightPanel .plot {
     display: flex;
