--- a/src/components/Train/AdvancedView/AdvancedView.module.css
+++ b/src/components/Train/AdvancedView/AdvancedView.module.css
@@ -167,7 +167,7 @@
     margin-top: 1em;
   }
   .diagnoseResult .content .items {
-    margin-left: 2em;
+    /*margin-left: 2em;*/
     list-style-type: initial;
   }
   .diagnoseResult .content .action {
