--- a/src/components/Report/Score/AdvancedView.module.css
+++ b/src/components/Report/Score/AdvancedView.module.css
@@ -522,7 +522,6 @@
   display: flex;
   flex: auto;
   flex-direction: column;
-  padding: 0 10%;
 }
 
 .modelResult span {
@@ -538,7 +537,7 @@
   /*height: 1em;*/
   padding: 0.2em;
   border: 1px solid #C4CBD7;
-  margin: 0.2em;
+  /*margin: 0.2em;*/
   background-color: #FAFBFC;
   display: flex;
   align-items: center;
@@ -674,29 +673,29 @@
   display: flex;
   justify-content: center;
   cursor: pointer;
-  padding: 0.1em 0.25em;
-  margin-right: .25em;
+  padding: 10px 25px;
+  margin-right: 25px;
 }
 
 .button span {
-  font-size: 1rem;
+  font-size: 14px;
   color: #fff;
   font-weight: normal;
 }
 
 .or {
   display: flex;
-  margin: 0 0.25em;
+  margin: 0 25px
 }
 
 .or span {
-  font-size: 1.125rem;
+  font-size: 14px;
   font-family: HelveticaNeue;
   color: #000;
 }
 
 .selectText {
-  margin-right: 0.5em;
+  margin-right: 5px
 }
 
 .radioGroup {
@@ -704,7 +703,7 @@
   flex: none;
   flex-direction: column;
   position: relative;
-  padding-right: 0.15em;
+  padding-right: 15px
 }
 
 .radio {
@@ -1383,7 +1382,7 @@ span.performanceScore {
 
 .costCell span {
   font-family: SanFranciscoText;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.29;
   color: #000000;
   max-width: 100%;
@@ -1447,9 +1446,9 @@ span.performanceScore {
 .costColor {
   display: flex;
   flex: none;
-  width: 0.2em;
-  height: 0.2em;
-  margin: 0 0.05em;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
 }
 
 .cost11 {
